Update API docs and cut some console logs
